--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -30,13 +30,17 @@
 }
 
 .features {
-  display: flex;
   align-items: center;
   padding: 2rem 0;
   width: 100%;
+  display: flex;
 }
 
 .featureImage {
-  height: 200px;
-  width: 200px;
+  height: 150px;
+  width: 100px;
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  padding: 1rem 0;
 }
