--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -12,12 +12,45 @@
  */
 
 /* You can override the default Infima variables here. */
+
+
 :root {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: rgb(33, 175, 144);
-  --ifm-color-primary-darker: rgb(31, 165, 136);
-  --ifm-color-primary-darkest: rgb(26, 136, 112);
-  --ifm-color-primary-light: rgb(70, 203, 174);
-  --ifm-color-primary-lighter: rgb(102, 212, 189);
-  --ifm-color-primary-lightest: rgb(146, 224, 208);
+  --ifm-color-primary: #9476E7;
+  --ifm-color-primary-dark: #B49FEE;
+  --ifm-color-primary-darker: #A48AEA;
+  --ifm-color-primary-dt: #9476E7;
+  --ifm-color-primary-light: #D4C8F5;
+  --ifm-color-primary-lighter: #E4DDF9;
+  --ifm-color-primary-lightest: #F4F1FC;
+}
+
+.particles{
+  background-color: "#262941";
+  z-index: -10;
+  position: "absolute";
+  width: "100%";
+  height: "100%";
+  top: 0;
+  left: 0;
+}
+
+.hero__title{
+  z-index:1 !important; 
+  position: absolute;
+  top: 30%;
+  left: 30%;
+}
+
+.hero__subtitle{
+  z-index:1 !important; 
+  position: absolute;
+  top: 40%;
+  left: 29.5%;
+}
+
+.button{
+  z-index:1 !important; 
+  position: absolute;
+  top: 48%;
+  left: 43%;
 }
