--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -36,6 +36,15 @@
   display: flex;
 }
 
+.headerImage {
+  height: 300px;
+  width: 200px;
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  padding: 1rem 0;
+}
+
 .featureImage {
   height: 150px;
   width: 100px;
@@ -43,4 +52,18 @@
   max-height: 100%;
   width: auto;
   padding: 1rem 0;
+}
+
+.particles{
+  background-color: "#262941";
+  z-index: -10;
+  position: "absolute";
+  width: "100%";
+  height: "100%";
+  top: 0;
+  left: 0;
+}
+
+.hero__title{
+  z-index:1 !important; 
 }
