--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -24,33 +24,15 @@
   --ifm-color-primary-lightest: #F4F1FC;
 }
 
-.particles{
-  background-color: "#262941";
-  z-index: -10;
-  position: "absolute";
-  width: "100%";
-  height: "100%";
+.particles canvas{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
   top: 0;
   left: 0;
 }
 
-.hero__title{
-  z-index:1 !important; 
-  position: absolute;
-  top: 30%;
-  left: 30%;
-}
-
-.hero__subtitle{
-  z-index:1 !important; 
-  position: absolute;
-  top: 40%;
-  left: 29.5%;
-}
-
 .button{
-  z-index:1 !important; 
-  position: absolute;
-  top: 48%;
-  left: 43%;
+  z-index: 1;
 }
