--- a/src/theme/Navbar/styles.module.css
+++ b/src/theme/Navbar/styles.module.css
@@ -23,10 +23,10 @@
   position: absolute;
 }
 .moon::before {
-  content: '\1F600';
+  content: '\1f319';
 }
 .sun::before {
-  content: '\1F31E';
+  content: '\2600';
 }
 
 @media (max-width: 360px) {
