--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -87,15 +87,14 @@
 }
 
 .toolImage {
-  height: 100px;
-  width: 75px;
+  height: 80px;
   max-width: 100%;
   max-height: 100%;
   width: auto;
   padding: 1rem 0;
 }
 
-.particles{
+.particles {
   background-color: "#262941";
   z-index: -10;
   position: "absolute";
@@ -105,6 +104,15 @@
   left: 0;
 }
 
-.hero__title{
-  z-index:1 !important; 
+.hero__title {
+  z-index: 1 !important;
+}
+
+.hero__subtitle {
+  z-index: 1 !important;
+  color: #a4a9ad !important;
+}
+
+.text__gray {
+  color: #a4a9ad !important;
 }
