--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -13,18 +13,53 @@
 
 /* You can override the default Infima variables here. */
 
-
 :root {
-  --ifm-color-primary: #9476E7;
-  --ifm-color-primary-dark: #B49FEE;
-  --ifm-color-primary-darker: #A48AEA;
-  --ifm-color-primary-dt: #9476E7;
-  --ifm-color-primary-light: #D4C8F5;
-  --ifm-color-primary-lighter: #E4DDF9;
-  --ifm-color-primary-lightest: #F4F1FC;
+  --ifm-color-primary: #9476e7;
+  --ifm-color-primary-dark: #b49fee;
+  --ifm-color-primary-darker: #a48aea;
+  --ifm-color-primary-dt: #9476e7;
+  --ifm-color-primary-light: #d4c8f5;
+  --ifm-color-primary-lighter: #e4ddf9;
+  --ifm-color-primary-lightest: #f4f1fc;
 }
 
-.particles canvas{
+/* Dark mode overrides */
+html[data-theme="dark"] {
+  --ifm-color-emphasis-100: var(--ifm-color-gray-900);
+  --ifm-color-emphasis-200: var(--ifm-color-gray-800);
+  --ifm-color-emphasis-300: var(--ifm-color-gray-700);
+  --ifm-color-emphasis-400: var(--ifm-color-gray-600);
+  --ifm-color-emphasis-500: var(--ifm-color-gray-500);
+  --ifm-color-emphasis-600: var(--ifm-color-gray-400);
+  --ifm-color-emphasis-700: var(--ifm-color-gray-300);
+  --ifm-color-emphasis-800: var(--ifm-color-gray-200);
+  --ifm-color-emphasis-900: var(--ifm-color-gray-100);
+
+  --ifm-background-color: #121212;
+  --ifm-background-surface-color: #1e2125;
+
+  --ifm-hover-overlay: rgba(255, 255, 255, 0.05);
+
+  --ifm-menu-link-sublist-icon: url('data:image/svg+xml;utf8,<svg alt="Arrow" xmlns="http://www.w3.org/2000/svg" width="16px" height="16px" viewBox="0 0 24 24"><path fill="rgba(255,255,255,0.6)" d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"></path></svg>');
+
+  --ifm-color-content-secondary: rgba(255, 255, 255, 1);
+
+  /* Mardown color in dark mode */
+  --ifm-color-gray-800: var(--ifm-color-gray-300);
+}
+
+/* Docs overrides */
+.markdown p {
+  color: var(--ifm-color-gray-800) !important;
+}
+
+blockquote {
+  border-left: 10px solid var(--ifm-color-primary) !important;
+  border-top: 1px solid var(--ifm-color-primary) !important;
+}
+
+/* Hero overrides */
+.particles canvas {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -33,10 +68,19 @@
   left: 0;
 }
 
-.button{
+.button {
   z-index: 1;
 }
 
+/* Dropdown menu overrides */
 .dropdown .dropdown__menu {
   min-width: 14rem !important;
+}
+
+/* Highlight code lines */
+.docusaurus-highlight-code-line {
+  background-color: rgb(72, 77, 91);
+  display: block;
+  margin: 0 calc(-1 * var(--ifm-pre-padding));
+  padding: 0 var(--ifm-pre-padding);
 }
