--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -21,6 +21,7 @@
   --ifm-color-primary-light: #d4c8f5;
   --ifm-color-primary-lighter: #e4ddf9;
   --ifm-color-primary-lightest: #f4f1fc;
+  --ifm-navbar-search-input-color: var(--ifm-color-gray-900);
 }
 
 /* Dark mode overrides */
