Change section bg color

--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -94,7 +94,7 @@
   color: white;
   text-align: center;
   justify-content: center;
-  background-color: #636e72;
+  background-color: #3b4446;
 }
 
 .headerImage {
