--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -140,3 +140,14 @@ blockquote {
 section {
   border-bottom: 1px solid var(--ifm-hr-border-color);
 }
+
+.docusaurus-highlight-code-line {
+  background-color: rgb(0, 0, 0, 0.1);
+  display: block;
+  margin: 0 calc(-1 * var(--ifm-pre-padding));
+  padding: 0 var(--ifm-pre-padding);
+}
+
+html[data-theme="dark"] .docusaurus-highlight-code-line {
+  background-color: rgba(197, 189, 189, 0.3);
+}
