--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -27,12 +27,14 @@
   --ifm-footer-background-color: #2d3436 !important;
   --ifm-footer-title-color: #fff;
   --ifm-footer-link-color: #fff;
-  --ifm-heading-font-weight: 600;
+  --ifm-heading-font-weight: 700;
   --ifm-button-font-weight: 600;
   --ifm-font-weight-semibold: 500;
+  --ifm-font-size-base: 95%;
   --ifm-code-font-size: 90%;
-  --ra-color-tip: var(--ifm-color-primary);
-  --ra-color-text-dark: #000;
+  --ifm-line-height-base: 1.5;
+  --ifm-leading-desktop: 1.5;
+  --ifm-list-margin: var(--ifm-leading);
 }
 
 /* Dark mode overrides */
@@ -61,6 +63,10 @@ html[data-theme="dark"] {
 
   /* Mardown color in dark mode */
   --ifm-color-gray-800: var(--ifm-color-gray-300);
+
+  /* Code background and color */
+  --ifm-code-background: #282d33;
+  --ifm-code-color: #fff;
 }
 
 /* Admonition overrides */
@@ -68,6 +74,17 @@ html[data-theme="dark"] {
 .admonition .admonition-content p,
 .admonition .admonition-heading h5 {
   color: var(--ifm-heading-color) !important;
+}
+
+.alert--success {
+  --ifm-alert-background-color: var(--ifm-color-primary);
+  --ifm-alert-border-color: var(--ifm-color-primary);
+  --ifm-alert-color: var(--ifm-color-white);
+}
+
+.alert--success svg {
+  fill: #fff;
+  stroke: #fff;
 }
 
 /* Docs overrides */
@@ -129,7 +146,7 @@ blockquote {
 
 @media (max-width: 380px) {
   .navbar__logo {
-    height: auto !important;
+    width: auto !important;
   }
 }
 
@@ -150,4 +167,23 @@ section {
 
 html[data-theme="dark"] .docusaurus-highlight-code-line {
   background-color: rgba(197, 189, 189, 0.3);
+}
+
+/* GitHub Header Link */
+.header-github-link:hover {
+  opacity: 0.6;
+}
+
+.header-github-link:before {
+  content: "";
+  width: 24px;
+  height: 24px;
+  display: flex;
+  background: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E")
+    no-repeat;
+}
+
+html[data-theme="dark"] .header-github-link:before {
+  background: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill='white' d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E")
+    no-repeat;
 }
