Override styles introduced in alpha58

--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -149,6 +149,10 @@
   color: var(--ifm-color-black);
 }
 
+.heroProjectText {
+  color: var(--ifm-color-white);
+}
+
 .text__gray {
   color: #a4a9ad !important;
 }
