fixed mobile logo and footer

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -154,6 +154,10 @@ blockquote {
   color: #fff !important;
 }
 
+.footer {
+  padding: 1rem;
+}
+
 section {
   border-bottom: 1px solid var(--ifm-hr-border-color);
 }
@@ -195,4 +199,10 @@ html[data-theme="dark"] .header-github-link:before {
 
 .no_dropdown:after {
   display: none !important;
+}
+
+@media (max-width: 380px){
+  .navbar__logo {
+    content: url("/img/strata_favicon.png") !important;
+  }
 }
