--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -97,6 +97,17 @@
   background-color: #3b4446;
 }
 
+.expedition {
+  align-items: left;
+  padding: 2rem 0;
+  width: 100%;
+  display: flex;
+  color: white;
+  text-align: left;
+  justify-content: left;
+  background-color: #dfe6e9;
+}
+
 .headerImage {
   height: 300px;
   width: 200px;
@@ -121,6 +132,11 @@
   max-height: 100%;
   width: auto;
   padding: 1rem 0;
+}
+
+.expeditionImage {
+  height: 550px;
+  width: auto;
 }
 
 .particles {
